[package]
name = "niinii"
version = "0.1.0"
authors = ["netdex <admin@netdex.org>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tracy"]
tracy = []
# TODO: disabled until upstream updates imgui to 0.10
# hook = ["dep:hudhook"]

[patch.crates-io]
# imgui = { path = "../imgui-rs/imgui" }
# imgui-winit-support = { path = "../imgui-rs/imgui-winit-support" }
# imgui-glow-renderer = { path = "../imgui-rs/imgui-glow-renderer" }

# imgui = { git = "https://github.com/Netdex/imgui-rs", branch = "hidpi-rounded-fix" }
# imgui-sys = { git = "https://github.com/Netdex/imgui-rs", branch = "hidpi-rounded-fix" }
# imgui-winit-support = { git = "https://github.com/Netdex/imgui-rs", branch = "hidpi-rounded-fix" }
# imgui-glow-renderer = { git = "https://github.com/Netdex/imgui-rs", branch = "hidpi-rounded-fix" }
# imgui-dx9-renderer = { git = "https://github.com/Netdex/imgui-dx9-renderer" }
# imgui-dx11-renderer = { git = "https://github.com/Netdex/imgui-dx11-renderer" }
# imgui-dx9-renderer = { path = "../imgui-dx9-renderer" }
# imgui-dx11-renderer = { path = "../imgui-dx11-renderer" }
# hudhook = { git = "https://github.com/veeenu/hudhook.git" }

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# on windows, you must install freetype with vcpkg
imgui = { version = "0.10.0", features = ["tables-api", "freetype", "docking"] }
imgui-sys = { version = "0.10.0", features = ["use-vcpkg"] }
imgui-winit-support = { version = "0.10.0" }
clipboard = "0.5"
imgui-glow-renderer = "0.10.0"
glow = "0.10.0"
glutin = "0.29.1"
winit = "0.27.2"

log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-tracy = "0.10.2"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
regex = "1"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
num-format = "0.4.0"
toml = "0.5"
fancy-regex = "0.10"
bitflags = "1.3.2"
enum_dispatch = "0.3"
enclose = "1.1.8"
once_cell = "1.17.1"

flate2 = { version = "1.0" }
# rayon = "1.5.1"
deepl-api = "0.3.1"
# hudhook = { version = "0.3.0", features = ["simplelog"], optional = true }
dirs = "4.0.0"
rodio = "0.17.1"

ichiran = { path = "third-party/ichiran" }
openai-chat = { path = "third-party/openai-chat" }

[target.'cfg(windows)'.dependencies]
imgui-dx11-renderer = { path = "third-party/imgui-dx11-renderer" }
vvcore = { path = "third-party/vvcore" }

winapi = { version = "0.3" }
wio = "0.2"
# detour = { version = "0.8", default-features = false }

[lib]
name = "libniinii"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["third-party/ichiran"]

# flate2 is slow in debug mode
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3

[build-dependencies]
winres = "0.1"
