[patch.crates-io]
# TODO: imgui-rs 0.12.0 has a bug that causes it to crash it debug mode.
imgui = { git = "https://github.com/Netdex/imgui-rs", branch = "glow-viewports-mdpi" }
imgui-sys = { git = "https://github.com/Netdex/imgui-rs", branch = "glow-viewports-mdpi" }
imgui-winit-support = { git = "https://github.com/Netdex/imgui-rs", branch = "glow-viewports-mdpi" }
imgui-glow-renderer = { git = "https://github.com/Netdex/imgui-rs", branch = "glow-viewports-mdpi" }
imgui-winit-glow-renderer-viewports = { git = "https://github.com/Netdex/imgui-rs", branch = "glow-viewports-mdpi" }

# imgui = { path = "../../imgui-rs/imgui" }
# imgui-sys = { path = "../../imgui-rs/imgui-sys" }
# imgui-winit-support = { path = "../../imgui-rs/imgui-winit-support" }
# imgui-glow-renderer = { path = "../../imgui-rs/imgui-glow-renderer" }
# imgui-winit-glow-renderer-viewports = { path = "../../imgui-rs/imgui-winit-glow-renderer-viewports" }
# hudhook = { git = "https://github.com/veeenu/hudhook.git" }

[workspace]
members = [
    "niinii",
    "ichiran",
    "openai-chat",
    "third-party/eventsource-stream",
    "third-party/imgui-dx11-renderer",
    "third-party/vvcore",
]
resolver = "2"

# flate2 is slow in debug mode
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3