[package]
name = "niinii"
version = "0.1.0"
authors = ["netdex <admin@netdex.org>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tracing-tracy = ["dep:tracing-tracy"]
tracing-chrome = ["dep:tracing-chrome"]
voicevox = ["vvcore", "rodio"]
hook = ["dep:hudhook"]

[dependencies]
# NOTE: these dependencies should be updated all at once
# on windows, you must install freetype with vcpkg
imgui = { version = "0.12.0", features = ["tables-api", "freetype", "docking"] }
imgui-sys = { version = "0.12.0", features = ["use-vcpkg"] }
imgui-winit-support = { version = "0.12.0" }
imgui-glow-renderer = "0.12.0"
imgui-winit-glow-renderer-viewports = "0.12.0"
glow = "0.13.1"
glutin = "0.31.1"
winit = { version = "0.29.3", features = ["rwh_05"] }
glutin-winit = "0.4.2"

# async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
backon = "1.3"

# diagnostics
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-tracy = { version = "0.11", optional = true }
tracing-chrome = { version = "0.7.1", optional = true }
env_logger = "0.11"

# language support
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
fancy-regex = "0.14"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.4"
strum = "0.26"
strum_macros = "0.26"
thiserror = "2"
num-format = "0.4.0"
bitflags = "2.3"
enum_dispatch = "0.3"
enclose = "1.1.8"
once_cell = "1.17.1"
itertools = "0.14"

# capabilities
raw-window-handle = "0.5.2"
copypasta = "0.10"
flate2 = { version = "1.0" }
deepl-api = "0.4"
dirs = "6.0"
rodio = { version = "0.20.1", optional = true }
# rayon = "1.5.1"
hudhook = { version = "0.8.0", optional = true }

# interned
ichiran = { path = "../ichiran" }
openai-chat = { path = "../openai-chat" }

[target.'cfg(windows)'.dependencies]
imgui-dx11-renderer = { path = "../third-party/imgui-dx11-renderer" }
vvcore = { path = "../third-party/vvcore", optional = true }

winapi = { version = "0.3" }
wio = "0.2"
# detour = { version = "0.8", default-features = false }

[lib]
name = "libniinii"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
winres = "0.1"
