[package]
name = "openai"
version = "0.1.0"
authors = ["netdex <admin@netdex.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1" }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

reqwest = { version = "0.12", features = ["json", "stream"] }
tiktoken-rs = "0.6"
backon = "1.3.0"

log = "0.4"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.0"
serde-untagged = "0.1"
thiserror = "2"
lazy_static = "1.4.0"
strum = "0.26"
strum_macros = "0.26"
derive_more = { version = "1", features = ["display"] }
futures-util = "0.3"

eventsource-stream = { path = "../third-party/eventsource-stream" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
tracing-test = "0.2.4"
serde_path_to_error = "0.1"
