[package]
name = "openai"
version = "0.1.0"
authors = ["netdex <admin@netdex.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1" }
tokio-stream = { version = "0.1", features = ["sync"] }

reqwest = { version = "0.13", features = ["json", "stream"] }
tiktoken-rs = "0.9"
backon = "1.6.0"

log = "0.4"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.16"
serde-untagged = "0.1"
thiserror = "2"
lazy_static = "1.5.0"
strum = "0.27"
strum_macros = "0.27"
derive_more = { version = "2", features = ["display"] }
futures-util = "0.3"
bon = "3.8.2"

eventsource-stream = { path = "../third-party/eventsource-stream" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
# tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
tracing-test = "0.2.5"
serde_path_to_error = "0.1"
